--- a/templates/trabajador.html
+++ b/templates/trabajador.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <div class="logo-completo">
             <img class="encabezado-en-linea logo-imagen" src="../static/img/header/logo/logo.png" alt="logo">
